fixing aside image src path

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </div>
     <aside class="aside-img">
-      <img src="./media/images/panda.jpeg" alt="baby panda">
+      <img src="media/images/panda.jpeg" alt="baby panda">
     </aside>
   </div>
 </body>
