refactoring skills structure

--- a/resume.html
+++ b/resume.html
@@ -28,13 +28,52 @@
 
     <div id="skills">
       <h2>Skills</h2>
-      <ul>
-        <li><h3>Languages</h3><p>Golang</p><p>PHP</p><p>JavaScript</p></li>
-        <li><h3>OS</h3><p><em>Linux</em></p><p>Windows</p><p>MacOS</p></li>
-        <li><h3>Linux distributions</h3><p>Ubuntu</p><p>Centos</p><p>Gentoo</p></li>
-        <li><h3>RDB</h3><p>MySQL</p><p>PostgreSQL</p><p>SQLite</p></li>
-        <li><h3>NoSQL</h3><p>Redis</p><p>MongoDB</p><p>Amazon DynamoDB</p></li>
-      </ul>
+      <table>
+        <tr>
+          <th>Languages</th>
+          <th class="whitespace"></th>
+          <th>OS</th>
+          <th class="whitespace"></th>
+          <th>Linux distributions</th>
+          <th class="whitespace"></th>
+          <th>RDB</th>
+          <th class="whitespace"></th>
+          <th>NoSQL</th>
+        </tr>
+        <tr>
+          <td>Golang</td>
+          <td class="whitespace"></td>
+          <td>Linux</td>
+          <td class="whitespace"></td>
+          <td>Ubuntu</td>
+          <td class="whitespace"></td>
+          <td>MySQL</td>
+          <td class="whitespace"></td>
+          <td>Redis</td>
+        </tr>
+        <tr>
+          <td>PHP</td>
+          <td class="whitespace"></td>
+          <td>Windows</td>
+          <td class="whitespace"></td>
+          <td>Centos</td>
+          <td class="whitespace"></td>
+          <td>PostgreSQL</td>
+          <td class="whitespace"></td>
+          <td>MongoDB</td>
+        </tr>
+        <tr>
+          <td>JavaScript</td>
+          <td class="whitespace"></td>
+          <td>MacOS</td>
+          <td class="whitespace"></td>
+          <td>Gentoo</td>
+          <td class="whitespace"></td>
+          <td>SQLite</td>
+          <td class="whitespace"></td>
+          <td>Amazon DynamoDB</td>
+        </tr>
+      </table>
     </div>
     <footer class="clear footer"></footer>
   </div>
