--- a/hobby.html
+++ b/hobby.html
@@ -16,6 +16,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li class="onpage"><a href="hobby.html">Hobby</a></li>
+      <li><a href="map.html">Map</a></li>
     </ul>
   </nav>
   <div id="main-body">
