--- a/map.html
+++ b/map.html
@@ -20,7 +20,9 @@
     </ul>
   </nav>
   <div id="main-body">
-    <div id="map"></div>
+    <div class="map-wrapper">
+      <div id="map"></div>
+    </div>
   </div>
   <footer class="clear footer"></footer>
 </body>
