--- a/map.html
+++ b/map.html
@@ -27,6 +27,7 @@
   <div id="main-body">
     <div class="map-wrapper">
       <div id="map"></div>
+      <div id="legend"><h3>Legend</h3></div>
     </div>
   </div>
   <footer class="clear footer"></footer>
